Name:               diagnosis
Version:            0.1.2
Synopsis:           haskell implementation of diagnostic framework
Description:        This package consists of 3 different programms:
                    * an interpreter for existing diagnoser scripts
                    * a standalone client program that can be used to send diagnosis messages
License:            BSD3
License-file:       LICENSE
Author:             oliver mueller
Maintainer:         oliver.mueller@gmail.com
Category:           Development
Build-type:         Simple
Cabal-version:      >=1.6
source-repository head
  type:             git
  location:         https://github.com/marcmo/hsDiagnosis
library
  HS-Source-Dirs: src
  exposed-modules:
    Com.CanClient,
    Com.DiagBase,
    Com.DiagClient,
    Com.DiagMessage,
    Com.HSFZMessage,
    Diag.DiagnosisCodes,
    Util.Encoding,
    Util.RecursiveContents,
    Util.Timer,
    Config
  build-depends:
    base >= 4 && < 5,
    bytestring,
    parsec >= 3.0,
    network,
    mtl,
    directory,
    cereal,
    filepath,
    text,
    configurator
test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests src
  main-is:        Tests.hs

  ghc-options:
    -Wall -threaded -O0 -rtsopts

  build-depends:
    HUnit >= 1.2,
    QuickCheck >= 2.4,
    base,
    tasty >= 0.3,
    tasty-quickcheck >= 0.3

