Name:               diagnosis
Version:            0.1.4
Synopsis:           haskell implementation of diagnostic framework
Description:        This package consists of 3 different programms:
                    * an interpreter for existing diagnoser scripts
                    * a standalone client program that can be used to send diagnosis messages
License:            BSD3
License-file:       LICENSE
Author:             oliver mueller
Maintainer:         oliver.mueller@gmail.com
Category:           Development
Build-type:         Simple
Cabal-version:      >=1.6
source-repository head
  type:             git
  location:         https://github.com/marcmo/hsDiagnosis
library
  HS-Source-Dirs: src
  exposed-modules:
    Diag.Com.CanClient,
    Diag.Com.DiagBase,
    Diag.Com.DiagClient,
    Diag.Com.DiagMessage,
    Diag.Com.HSFZMessage,
    Diag.DiagnosisCodes,
    Diag.Util.Encoding,
    Diag.Util.RecursiveContents,
    Diag.Util.Timer,
    Diag.Config
  build-depends:
    base >= 4 && < 5,
    bytestring,
    parsec >= 3.0,
    network,
    mtl,
    directory,
    cereal,
    filepath,
    text,
    configurator,
    containers,
    transformers,
    aeson,
    vector,
    attoparsec,
    websockets-snap,
    websockets,
    snap-core,
    snap-server,
    serialport,
    utf8-string
test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests src
  main-is:        Tests.hs

  ghc-options:
    -Wall -threaded -O0 -rtsopts

  build-depends:
    HUnit >= 1.2,
    QuickCheck >= 2.4,
    base,
    tasty >= 0.3,
    tasty-quickcheck >= 0.3

executable diagserver
  hs-source-dirs:      src
  main-is: Diag/Web/Server.hs
  build-depends:
    base >=4 && <5,
    containers,
    transformers,
    websockets-snap,
    websockets,
    snap-core,
    snap-server,
    serialport,
    utf8-string
  default-language:    Haskell2010

