Name:                diagnostics
Version:             0.1.0
Description:         framework for sending and receiving diagnostic messages
Author:              oliver mueller	
Maintainer:          oliver.mueller@gmail.com
Copyright:           Oliver Mueller <oliver.mueller@gmail.com>
Category:	           Testing
Build-Type:          Simple
Cabal-Version: 		 >= 1.2
License: BSD3
Library
  Build-Depends:       base,mtl,network,regex-compat
  Exposed-Modules:
    DiagClient,
    BasicDiagnosis,
    DiagMessage,
    HSFZMessage,
    Timer,
    Util
  GHC-options:
Executable diagnosis
  Build-Depends:      haskell98,cmdargs
  Main-Is:            Main.hs
  ghc-options:        -O2 -main-is main
